# snipper

./: .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  clippy.toml  deny.toml  justfile  rustfmt.toml  typos.toml
.github/workflows/: ci.yml  fuzz-nightly.yml
crates/snipper-cli/: Cargo.toml
crates/snipper-cli/src/: main.rs
crates/snipper-cli/tests/: cli_contract.rs
crates/snipper-context/: Cargo.toml
crates/snipper-context/proptest-regressions/: lib.txt
crates/snipper-context/src/: lib.rs
crates/snipper-context/tests/: golden_csharp.rs  golden_typescript.rs  invariants.proptest-regressions  invariants.rs
crates/snipper-core/: Cargo.toml
crates/snipper-core/src/: lib.rs
crates/snipper-lsp/: Cargo.toml
crates/snipper-lsp/src/: lib.rs  main.rs
crates/snipper-lsp/tests/: inv5_lsp_types_isolation.rs  smoke.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: agent-conventions.md  architecture.md  decisions.log.md  fuzzing.md  glossary.md  representation-formats.md
docs/adr/: 0000-template.md  0001-doc-template.md  0002-tier1-treesitter-vs-astgrep.md  0003-representation-formats.md  0004-follow-rust-api-guidelines-on-public-surfaces.md  0005-prefix-postfix-conflict-strategy.md  0006-surround-prime-directive.md  0007-roslyn-sidecar-protocol.md  0008-editor-extension-packaging.md  0009-xtask-manifest-generator.md  README.md
docs/stages/: README.md  S0-baseline-workspace.md  S1-csharp-cst-classifier.md  S10-reactor-core.md  S11-smart-ranking.md  S12-editor-integrations.md  S2-test-harness.md  S3-postfix-template-engine.md  S4-lsp-adapter-mvp.md  S5-prefix-expansions.md  S6-surround-selection.md  S7-multi-language.md  S8-roslyn-sidecar.md  S9-command-expansions.md
extensions/snipper-vs/: Snipper.VisualStudio.sln  Snipper.VisualStudio.slnx
extensions/snipper-vs/Snipper.VisualStudio/: LspSnippetConverter.cs  Snipper.VisualStudio.csproj  SnipperBinaryLocator.cs  SnipperCommands.cs  SnipperLanguageServerProvider.cs  SnipperLspRpc.cs  SnipperOptionsPage.cs  SnipperPackage.cs  TabstopInserter.cs  merged.source.extension.vsixmanifest  source.extension.vsixmanifest
extensions/snipper-vs/Snipper.VisualStudio.IntegrationTests/: GlobalFixtures.cs  LspSnippetConverterVsTests.cs  Snipper.VisualStudio.IntegrationTests.csproj  SnipperBinaryLocatorTests.cs  SnipperCommandRpcTests.cs  SnipperLanguageClientTests.cs  SnipperOptionsPageTests.cs  TabstopInserterTests.cs
extensions/snipper-vs/Snipper.VisualStudio.Tests/: IntegrationTests.cs  LspSnippetConverterTests.cs  Snipper.VisualStudio.Tests.csproj
extensions/snipper-vs/scripts/: vs-smoke.ps1
extensions/snipper-vscode/: .vscodeignore  package-lock.json  package.generated.json  package.json  tsconfig.json
extensions/snipper-vscode/src/: commands.generated.ts  commands.ts  extension.ts  serverPath.ts
extensions/snipper-vscode/test/: runTests.ts
extensions/snipper-vscode/test/suite/: extension.test.ts  index.ts
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_context.rs  receiver_range.rs  render_prefix_template.rs  render_surround_template.rs  render_template.rs
languages/: csharp.toml  typescript.toml
sidecar/Snipper.Roslyn/: Program.cs  Snipper.Roslyn.csproj
snippets/csharp/: commands.toml  postfix.toml  prefix.toml  surround.toml
snippets/typescript/: postfix.toml  prefix.toml  surround.toml
template/: .editorconfig  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  Cargo.toml  README.md  clippy.toml  deny.toml  justfile  rust-toolchain.toml  rustfmt.toml  typos.toml
template/.github/workflows/: ci.yml  fuzz-nightly.yml
template/crates/my-project-core/: Cargo.toml
template/crates/my-project-core/src/: lib.rs
template/docs/: SPEC.md  architecture.md  decisions.log.md  fuzzing.md  glossary.md  privacy.md
template/docs/adr/: 0001-doc-template.md  README.md
template/docs/audit/: README.md
template/docs/stages/: README.md  S0-baseline-workspace.md
template/fuzz/: Cargo.toml
template/fuzz/fuzz_targets/: fuzz_target_1.rs
tests/golden/csharp/: bare_identifier.json  block_comment.json  code_after_dot.json  line_comment.json  method_decl.json  other.json  string_literal.json  variable_decl.json
tests/golden/typescript/: bare_identifier.json  code_after_dot.json  function_decl.json  line_comment.json  string_literal.json  variable_decl.json
