[workspace]
resolver = "2"
members  = [
    "crates/my-project-core",
    # Add your crates here
]
exclude = ["fuzz"]

[workspace.package]
version       = "0.1.0"
edition       = "2021"
rust-version  = "1.85"
license       = "MIT"
# Fill in these fields:
authors       = ["Your Name <you@example.com>"]
repository    = "https://github.com/YOUR-ORG/my-project"
homepage      = "https://github.com/YOUR-ORG/my-project"
documentation = "https://docs.rs/my-project"
readme        = "README.md"
keywords      = []
categories    = []

[workspace.dependencies]
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror  = "1"
tracing    = "0.1"
clap       = { version = "4", features = ["derive", "env", "wrap_help"] }
miette     = { version = "7", features = ["fancy"] }
sysexits   = "0.8"
arbitrary  = { version = "1", features = ["derive"] }
proptest   = "1"
tempfile   = "3"

[workspace.lints.rust]
unsafe_code                   = "forbid"
missing_docs                  = "warn"
missing_debug_implementations = "warn"
missing_copy_implementations  = "warn"
rust_2018_idioms              = { level = "warn", priority = -1 }
unreachable_pub               = "warn"
single_use_lifetimes          = "warn"
unused_qualifications         = "warn"

[workspace.lints.clippy]
pedantic                = { level = "warn", priority = -1 }
nursery                 = { level = "warn", priority = -1 }
cargo                   = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
module_name_repetitions = "allow"
redundant_pub_crate     = "allow"

[profile.release]
opt-level = 3
lto       = "thin"
strip     = "debuginfo"
