[package]
name        = "snipper-cli"
description = "Command-line interface for the Snipper expansion engine."
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
authors.workspace       = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true
readme.workspace        = true
keywords.workspace      = true
categories.workspace    = true

[[bin]]
name = "snipper"
path = "src/main.rs"

[dependencies]
snippercore    = { path = "../snipper-core",    package = "snipper-core",    version = "0.0.0" }
snippercontext = { path = "../snipper-context", package = "snipper-context", version = "0.0.0", features = ["lang-csharp", "lang-typescript"] }
clap          = { workspace = true }
clap_complete = { workspace = true }
miette        = { workspace = true }
serde_json    = { workspace = true }
sysexits      = { workspace = true }

[lints]
workspace = true
