[package]
name        = "snipper-context"
description = "CST context classifier for the Snipper expansion engine."
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
authors.workspace       = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true
readme.workspace        = true
keywords.workspace      = true
categories.workspace    = true

[features]
default = ["backend-treesitter"]
backend-treesitter = []
backend-astgrep    = []

[dependencies]
snippercore = { path = "../snipper-core", package = "snipper-core" }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
