[package]
name        = "snipper-context"
description = "CST context classifier for the Snipper expansion engine."
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
authors.workspace       = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true
readme.workspace        = true
keywords.workspace      = true
categories.workspace    = true

[features]
default = ["backend-treesitter", "lang-csharp"]
backend-treesitter = ["dep:tree-sitter"]
backend-astgrep    = []
lang-csharp        = ["backend-treesitter", "dep:tree-sitter-c-sharp"]
lang-typescript    = ["backend-treesitter", "dep:tree-sitter-typescript"]

[dependencies]
snippercore = { path = "../snipper-core", package = "snipper-core", version = "0.0.0" }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tree-sitter       = { version = "0.26.9", optional = true }
tree-sitter-c-sharp = { version = "0.23.5", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }

[dev-dependencies]
proptest = { workspace = true }

[lints]
workspace = true
