[package]
name        = "my-project-core"
description = "Core value types for my-project."
version.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
authors.workspace       = true
repository.workspace    = true
homepage.workspace      = true
documentation.workspace = true
readme.workspace        = true
keywords.workspace      = true
categories.workspace    = true

[dependencies]
serde = { workspace = true }

[dev-dependencies]
proptest   = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
